# MLIRTemplate

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  build.dockerfile  tablegen_compile_commands.yml
Includes/MLIRTemplate/Dialects/: CMakeLists.txt
Includes/MLIRTemplate/Dialects/ExampleDialect/: CMakeLists.txt  ExampleDialect.hpp  ExampleDialect.td  ExampleOps.hpp  ExampleOps.td
Includes/MLIRTemplate/ExampleC/: Dialects.hpp
Opt/: CMakeLists.txt  ExampleOpt.cpp
Python/: CMakeLists.txt  ExampleExtension.cpp
Python/MLIRTemplate/Dialects/: ExampleOps.td  example.py
Python/dialects/: _Example_ops_gen.py  _Example_ops_gen.py.d
Sources/: CMakeLists.txt
Sources/MLIRTemplate/: CMakeLists.txt  Test.cpp
Sources/MLIRTemplate/CAPI/Dialects/: CMakeLists.txt  Dialects.cpp
Sources/MLIRTemplate/Dialects/: CMakeLists.txt
Sources/MLIRTemplate/Dialects/ExampleDialect/: CMakeLists.txt  ExampleDialect.cpp  ExampleOps.cpp
Translate/: CMakeLists.txt  ExampleTranslate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  ExampleCAPITest.c
